--- a/marketplace/src/index.html
+++ b/marketplace/src/index.html
@@ -14,5 +14,7 @@
     const stripe   = Stripe('pk_test_51I84IeCe6jNzcQRaPGQjWqvqxBZLAhshhLFZ2EQiOkNXsMkRiPZMFwfUl2Zdv40WPbH6cwFlWThul6xCEEY0r5q400I7yOr5iG');
     const elements = stripe.elements();
   </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
